fixes issue where only 1/2 screen is used on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3596,6 +3596,7 @@ section.disqus
 	box-sizing: border-box;
   }
 
+  .page header.two_columns section,
   .page header hgroup,
   .page header section
   {
